# SolVoteX

./: .gitignore  DEPLOY.md  README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
anchor/: Anchor.toml
anchor/programs/solvotex/: Cargo.toml
anchor/programs/solvotex/src/: lib.rs
backend/: .env.example  index.ts  package-lock.json  package.json
backend/middleware/: auth.ts
backend/models/: Poll.ts  User.ts  Vote.ts
backend/routes/: auth.ts  polls.ts  stats.ts  token.ts  verification.ts  vote.ts  voters.ts
backend/utils/: mailer.ts  solanaWallet.ts  tokenTransfer.ts
src/app/: globals.css  landing.css  layout.tsx  providers.tsx
src/app/admin/: page.tsx
src/app/auth/: page.tsx
src/app/results/[pollId]/: page.tsx
src/app/verify/: page.tsx
src/app/vote/[pollId]/: page.tsx
src/app/vote/check/: page.tsx
src/components/landing/: LandingPage.tsx  Scene3D.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useLiveVotes.ts
src/utils/: api.ts  constants.ts  program.ts
walrus-landing/: index.html
