[package]
name = "solvotex"
version = "0.1.0"
description = "SolVoteX - Decentralized Voting DApp on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solvotex"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
